kubernetes/core/cilium/templates/http-redirect.yaml
# Redirect all HTTP traffic to HTTPS for internal services
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: kube-system
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: http
  hostnames:
    - "*.int.lorenzodebie.be"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
